[package]
name = "test_each_file"
version = "0.3.1"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>", "Julia Dijkstra"]
description = "Generates a test for each file in a specified directory."
keywords = ["test", "proc-macro"]
edition = "2021"
license = "MIT"
repository = "https://github.com/binary-banter/test-each-file"

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1.0.33"
proc-macro2 = "1.0.69"
syn = { version = "2.0.39", features = ["full"] }
proc-macro-error = "1.0.4"
unicode-ident = "1.0.12"
