[package]
name = "test_each_file"
version = "0.3.2"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>", "Julia Dijkstra"]
description = "Generates a test for each file in a specified directory."
keywords = ["test", "proc-macro"]
edition = "2021"
license = "MIT"
repository = "https://github.com/binary-banter/test-each-file"

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1.0.36"
proc-macro2 = "1.0.81"
syn = { version = "2.0.59", features = ["full"] }
unicode-ident = "1.0.12"
